@@ -1,5 +1,11 @@
 2008-12-07  Jonathon Jongsma  <jonathon@quotidian.org>
 
+	* examples/text/Makefile.am:
+	* examples/text/user-font.cc: Added a very simple example of using a
+	UserFontFace to draw text
+
+2008-12-07  Jonathon Jongsma  <jonathon@quotidian.org>
+
 	* cairomm/fontface.cc: Fix the default implementation of UserFontFace::init()
 	to set up the font extents parameter correctly according to the documentation
 
